--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -19,9 +19,10 @@ jobs:
           distribution: 'corretto'
           java-version: '21'
           cache: 'gradle'
-      - uses: nuget/setup-nuget@v2
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v4
         with:
-          nuget-version: 'latest'
+          dotnet-version: 8.0.x
       - uses: actions/cache@v4
         with:
           path: |
@@ -32,7 +33,7 @@ jobs:
           key: ${{ runner.os }}-Build-${{ hashFiles('gradlew.bat', 'src/dotnet/*/*.csproj', './*.props', 'gradle-wrapper.properties') }}
       - run: ./gradlew :buildPlugin --no-daemon
       - run: ./gradlew :buildResharperPlugin --no-daemon
-      - run: nuget -verify output/ReSharperPlugin*.nupkg
+      - run: dotnet nuget verify output/ReSharperPlugin*.nupkg
       - uses: actions/upload-artifact@v4
         if: always()
         with:
