--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   Publish:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     environment: Deploy
     steps:
       - uses: actions/checkout@v4
@@ -19,7 +19,17 @@ jobs:
           distribution: 'corretto'
           java-version: '17'
           cache: 'gradle'
-      - run: ./gradlew :publishPlugin -PBuildConfiguration="Release" -PPluginVersion="${{ github.ref_name }}" -PPublishToken="${{ secrets.PUBLISH_TOKEN }}"
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: 8.0.x
+      - name: Publish Rider Package
+        run: ./gradlew :publishPlugin -PBuildConfiguration="Release" -PPluginVersion="${{ github.ref_name }}" -PPublishToken="${{ secrets.PUBLISH_TOKEN }}"
+        env:
+          PUBLISH_TOKEN: ${{ secrets.PUBLISH_TOKEN }}
+      - run: ./gradlew :buildResharperPlugin
+      - name: Publish ReSharper Package
+        run: nuget push --source "https://plugins.jetbrains.com/api/v2/package" --api-key "$PUBLISH_TOKEN" output/ReSharperPlugin*.nupkg
         env:
           PUBLISH_TOKEN: ${{ secrets.PUBLISH_TOKEN }}
       - name: Upload binaries to release
