--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@
 DotnetPluginId=ReSharperPlugin.RimworldDev
 DotnetSolution=ReSharperPlugin.RimworldDev.sln
 RiderPluginId=com.jetbrains.rider.plugins.rimworlddev
-PluginVersion=2024.1.7
+PluginVersion=2024.2
 
 BuildConfiguration=Release
 
@@ -26,3 +26,6 @@ rdKotlinVersion=2.1.0
 intellijPlatformGradlePluginVersion=2.2.1
 gradleJvmWrapperVersion=0.14.0
 riderBaseVersion=2025.1
+
+# Required to download Rider artifacts from Maven (and not "binary" releases from CDN).
+org.jetbrains.intellij.platform.buildFeature.useBinaryReleases=false
